fixed bitch not showing up as 'your char'

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,7 +70,7 @@
 	border: 1px solid green;
 	float: left;
 	margin: 10px;
-	background-image: url("../images/evilRick.jpg");
+	background-image: url("../images/bitch.png");
 	cursor: url(../images/selectCursor.cur), auto;
 }
 
